Fix Java 8 incompatibilities in unit test files (List.of, Map.of, Set.of, String.repeat)
Signed-off-by: samikshya-chand_data <samikshya.chand@databricks.com>