@@ -9,6 +9,7 @@ import java.io.StringReader;
 import java.math.BigDecimal;
 import java.sql.*;
 import java.util.Calendar;
+import java.util.Collections;
 import java.util.Map;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -215,7 +216,7 @@ public class EmptyResultSetTest {
 
   @Test
   public void testGetObjectWithMap() throws SQLException {
-    assertNull(resultSet.getObject(1, Map.of()));
+    assertNull(resultSet.getObject(1, Collections.emptyMap()));
   }
 
   @Test
@@ -240,7 +241,7 @@ public class EmptyResultSetTest {
 
   @Test
   public void testGetObjectWithMapAndLabel() throws SQLException {
-    assertNull(resultSet.getObject("column", Map.of()));
+    assertNull(resultSet.getObject("column", Collections.emptyMap()));
   }
 
   @Test
